{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Our Vision/.keep
       - Our Vision/The Smart Nation Vision.md
-      - Our Vision/Smart Nation 1.md
+      - Our Vision/SN 1.md
       - Our Vision/SN2 A Thriving Digital Future for All.md
       - Our Goals/.keep
       - Our Goals/Goals of SN2.md
