--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,4 +7,4 @@ social_media:
   youtube: https://www.youtube.com/c/SmartNationSingapore
   instagram: https://instagram.com/smartnation.sg
   linkedin: https://www.linkedin.com/company/smart-nation-and-digital-government-office/
-  twitter: https://twitter.com/smartnationsg
+  twitter: https://x.com/smartnationsg
