--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Our Vision/.keep
       - Our Vision/The Smart Nation Vision.md
-      - Our Vision/Our Vision in 2014.md
+      - Our Vision/Our Smart Nation Vision in 2014.md
       - Our Vision/SN 2.md
       - Our Goals/.keep
       - Our Goals/Goals of SN2.md
