--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Our Vision/.keep
-      - Our Vision/The Smart Nation Vision.md
+      - Our Vision/Our Smart Nation Vision.md
       - Our Vision/Our Smart Nation Vision in 2014.md
       - Our Vision/Our Refreshed Smart Nation Vision.md
       - Our Goals/.keep
