--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -45,7 +45,7 @@ collections:
       - Health/Smart Health Initiatives.md
       - Health/Assistive Technology and Robotics In Healthcare.md
       - Health/HealthHub.md
-      - Health/National Steps Challenge™ & Healthy 365 App.md
+      - Health/Healthy 365 App.md
       - Health/Project Pensieve.md
       - Health/Singapore Eye Lesion Analyser.md
       - Health/Telehealth.md
