--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Business & Finance/Networked Trade Platform.md
       - Business & Finance/SGFinDex.md
       - Business & Finance/SGTraDex.md
+      - Care and Support/Oobee.md
       - Care and Support/.keep
       - Care and Support/Community Care Initiatives.md
       - Care and Support/GivingSG.md
