--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Artificial Intelligence/.keep
       - Artificial Intelligence/National AI Strategy.md
       - Artificial Intelligence/Be part of our AI Journey.md
-      - Artificial Intelligence/Singapore AI Research Week (New Editor).md
+      - Artificial Intelligence/Singapore AI Research Week.md
       - Artificial Intelligence/Singapore AI Research Week (Old Editor).md
       - Business & Finance/.keep
       - Business & Finance/Business & Finance Initiatives.md
