{"message":"Update file: collection.yml","userId":"59381","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -2,6 +2,7 @@ collections:
   initiatives:
     output: true
     order:
+      - Artificial Intelligence/Singapore AI.md
       - Artificial Intelligence/.keep
       - Artificial Intelligence/National AI Strategy.md
       - Artificial Intelligence/Be part of our AI Journey.md
